--- a/memelord-deployment.yml
+++ b/memelord-deployment.yml
@@ -170,7 +170,8 @@ spec:
           value: "False"
         - name: AWS_LOCATION
           value: "media"
-
+        - name: AWS_S3_ENDPOINT_URL
+          value: "http://minio.minio.svc.cluster.local:9000"
         resources:
           requests:
             cpu: 100m
