--- a/grafana.yml
+++ b/grafana.yml
@@ -54,6 +54,12 @@ spec:
               value: "https://auth.ee-lte-1.codemowers.io/me"
             - name: GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP
               value: "true"
+            - name: GF_USERS_AUTO_ASSIGN_ORG_ROLE
+              value: "Admin"
+            - name: GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH
+              value: "contains(groups[*], 'github.com:codemowers:admins') && 'Admin' || contains(groups[*], 'github.com:codemowers:collaborators') && 'Editor' || 'Viewer'"
+            - name: GF_AUTH_GENERIC_OAUTH_ALLOW_ASSIGN_GRAFANA_ADMIN
+              value: "true"
           volumeMounts:
             - name: grafana-storage
               mountPath: /var/lib/grafana
